--- a/src/main/webapp/shop/category.xhtml
+++ b/src/main/webapp/shop/category.xhtml
@@ -45,10 +45,12 @@
 								<h5 class="text-capitalize">#{ author.givenNames.toLowerCase()} #{author.surname.toLowerCase()}#{status.last ? "" : ", "}</h5>
 							</ui:repeat>
 							<div class="rating">
-								<c:forEach var="i" begin="1" end="4">
+								<small>
+									<h:outputText value="No customer reviews" rendered="#{bookReviewBean.noReviewsYet(book)}" style="color:#999;height:20px;"></h:outputText>
+								</small>
+								<ui:repeat value="#{bookReviewBean.getAverageStarList(book)}" var ="book">
 									<i class="fa fa-star golden-star" aria-hidden="true"></i>
-								</c:forEach>
-								<i class="fa fa-star-o golden-star" aria-hidden="true"></i>
+								</ui:repeat>
 							</div>
 							<h3 style="height:30px;">
 								<h:outputText value="#{book.retailPrice}">
