--- a/src/main/webapp/shop.xhtml
+++ b/src/main/webapp/shop.xhtml
@@ -49,7 +49,7 @@
 										<div class="product-panel">
 											<div style="height: 210px;">
 												<h:form>
-													<h:commandLink action="#{shop.viewBook(book.ISBN, genre)}">
+													<h:commandLink action="#{shop.viewBook(book.ISBN, book.genre)}">
 														<o:graphicImage dataURI="true" value="#{book.thumbnail}" width="128" height="192" />
 													</h:commandLink>
 												</h:form>
@@ -75,9 +75,14 @@
 													<h:form>
 														<h:commandLink rendered="#{book.stockLevel > 0}">
 															<button class="btn btn-primary text-capitalize" role="button"><i class="fa fa-cart-plus" aria-hidden="true"></i> Add to cart</button>
-															<f:ajax listener="#{cart.add(book.ISBN)}"/>
+															<f:ajax listener="#{cart.add(book.ISBN)}" render="@form"/>
 														</h:commandLink>
 														<h:commandButton styleClass="btn btn-primary disabled" value="Out of stock" rendered="#{book.stockLevel == 0}" />
+														<h:commandLink styleClass="btn btn-primary" action="#{wishlist.toggle(book.ISBN)}" rendered="#{memberSession.loggedIn}">
+															<h:panelGroup class="#{wishlist.wishlist.contains(book.ISBN) ? 'fa fa-heart text-danger' : 'fa fa-heart-o' }" />
+															<f:ajax listener="#{wishlist.toggle(book)}" render="@this"/>
+														</h:commandLink>
+														
 													</h:form>
 												</p>
 											</div>
