--- a/src/main/webapp/user/index.xhtml
+++ b/src/main/webapp/user/index.xhtml
@@ -5,19 +5,17 @@
                 xmlns:bookstore="http://dukesbookstore"
                 template="/WEB-INF/templates/user.template.xhtml"
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
-                xmlns:jsf="http://xmlns.jcp.org/jsf"
-                xmlns:v-on="http://www.vue.com"
-                xmlns:v-bind="http://www.vue.com">
+                xmlns:jsf="http://xmlns.jcp.org/jsf">
 
     <ui:define name="top"></ui:define> 
     <ui:define name="content">
-        
-		
-		
-		
-		
-		
-		
+
+
+
+
+
+
+
     </ui:define>
     <ui:define name="scripts">
         <h:outputScript library="javascripts" name="register.js" />
