basic auction listing, nice looking bid/checkout page (need to make bid work then checkout work for user sales)

--- a/src/main/webapp/user/create-user-sale.xhtml
+++ b/src/main/webapp/user/create-user-sale.xhtml
@@ -45,7 +45,7 @@
                                         <f:selectItem itemValue="new" itemLabel="New"/>
                                         <f:selectItem itemValue="good" itemLabel="Good"/>
                                         <f:selectItem itemValue="minor" itemLabel="Minor Damage"/>
-                                        <f:selectItem itemValue="Poor" itemLabel="Poor"/>
+                                        <f:selectItem itemValue="poor" itemLabel="Poor"/>
                                         <f:ajax event="change" execute="@this" render="@this" />
                                     </h:selectOneMenu>
                                 </div>
