Lost all my work gaah

--- a/src/main/webapp/admin/stock-report.xhtml
+++ b/src/main/webapp/admin/stock-report.xhtml
@@ -31,7 +31,7 @@
                             <f:passThroughAttribute name="step" value="1" />
                             <f:passThroughAttribute name="min" value="0" />
 							<f:ajax event="change" render="stockReport" />
-							<f:ajax event="keyup" render="stockReport" />
+							<f:ajax event="keyup" delay="300" render="stockReport" />
 
                         </h:inputText>
 					</h:form>
