--- a/src/main/webapp/shop/book.xhtml
+++ b/src/main/webapp/shop/book.xhtml
@@ -104,7 +104,7 @@
 								<h:link value="Review it!" outcome="/login" rendered="#{! memberSession.loggedIn}" />
                             </h:form>
                         </div>
-                        <div>  Own this book? <a>Sell it!</a>  </div>
+                        <div>  Own this book? <h:link outcome="/user/create-user-sale" value="Sell it!"/>  </div>
                     </div>
                 </div>
             </div>
